2007-12-11  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  We need core/base 0.10.15 or later.

2007-12-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Mark Nauwelaerts <manauw skynet be>

	* gst/avi/gstavimux.c: (gst_avi_mux_start_file):
	Fix regression in stream numbering. Fixes #502655.

2007-12-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Wai-Ming Ho <webregbox at yahoo dot co dot uk>

	* gst/rtp/gstrtph264pay.c: (gst_rtp_h264_pay_init),
	(gst_rtp_h264_pay_finalize), (gst_rtp_h264_pay_setcaps),
	(next_start_code), (is_nal_equal), (gst_rtp_h264_pay_decode_nal),
	(encode_base64), (gst_rtp_h264_pay_parse_sps_pps),
	(gst_rtp_h264_pay_handle_buffer):
	* gst/rtp/gstrtph264pay.h:
	Use higher performance start-code searching.
	Parse NALs and store SPS, PPS and profile in the caps so that they can
	be used in the SDP. Fixes #502814.

2007-12-11  Tim-Philipp Müller  <tim at centricular dot net>

	* sys/v4l2/v4l2_calls.c: (gst_v4l2_fill_lists):
	* sys/v4l2/v4l2src_calls.c: (gst_v4l2src_fill_format_list):
	  Init some structs to zero before we pass them to ioctl, which
	  avoids valgrind warnings.  Also fix a small memory leak.

2007-12-11  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: Wouter Cloetens <wouter at mind dot be>

	* gst/multipart/multipartdemux.c: (gst_multipart_demux_chain):
	Copy timestamp from input to output. Not very perfect yet but better
	than nothing. Fixes #503023.

2007-12-09  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/wavpack/gstwavpackdec.c: (gst_wavpack_dec_chain):
	  Also print a useful error message with the old Wavpack API
	  if possible.

2007-12-09  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/wavpack/gstwavpackdec.c:
	  More build fixes for old libwavpack versions: include config.h so
	  that WAVPACK_OLD_API is actually defined as detected; only use
	  WavpackGetErrorMessage if it is available. This fixes the build
	  on debian stable for me.
